[package]
authors = ["Andy"]
edition = "2018"
readme = "README.md"
name = "stm32app"
version = "0.1.0"

[dependencies]
embedded-hal = "*"
nb = "*"
cortex-m = "*"
cortex-m-rt = "*"
# Panic behaviour, see https://crates.io/keywords/panic-impl for alternatives
panic-halt = "*"

[dependencies.stm32f4xx-hal]
version = "*"
features = ["rt", "stm32f407"] # replace the model of your microcontroller here


[profile.release]
# optimize for size ('z' would optimize even more)
opt-level = 's'
# link with link time optimization (lto).
lto = true
# enable debugging in release mode.
debug = true
